--- a/Configs/.config/hypr/hyprlock/theme.conf
+++ b/Configs/.config/hypr/hyprlock/theme.conf
@@ -69,7 +69,7 @@ input-field {
     font_color = $wallbash_3xa9_rgba
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
+    placeholder_text = <i>Input Password</i> # Text rendered in the input box when it's empty.
     hide_input = false
     rounding = -1 # -1 means complete rounding (circle/oval)
     check_color = $wallbash_pry4_rgba
