--- a/Configs/.config/hypr/hyde.conf
+++ b/Configs/.config/hypr/hyde.conf
@@ -31,7 +31,7 @@
 # $EDITOR = code # default editor, if commented out , will use the default editor
 # $EXPLORER= dolphin # default file manager, if commented out , will use the default file manager
 # $TERMINAL = kitty # default terminal, if commented out , will use the org.gnome.desktop.default-applications.terminal
-# $LOCKSCREEN=hyprlock # default lockscreen, you can use any lockscreen you want, eg swaylock
+# $LOCKSCREEN=hyprlock # default lockscreen, you can use any lockscreen you want, eg hyprlock
 # $IDLE=hypridle # default idle manager, you can use any idle manager you want,eg swayidle
 
 
