--- a/Configs/.config/hypr/hypridle.conf
+++ b/Configs/.config/hypr/hypridle.conf
@@ -25,25 +25,17 @@ on-timeout = { brightnessctl -s && brightnessctl s 1% ;}
 
 # Lock it first before dpms off so that screen won't show for a moment after wake up.
 listener {
-    timeout = 120
+    timeout = 360
     on-timeout = $LOCKSCREEN
 }
 
 # DPMS off
 listener {
-    timeout = 300
-    on-timeout = hyprctl dispatch dpms off #do not turn off display while media is playing
+    timeout = 620
+    on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
-}
-
-# Suspend
-listener {
-    timeout = 500
-   on-timeout = systemctl suspend
 }
 
 # hyprlang noerror true
 # Source anything  from this path if you want to add your own listener
-# source command actually do not exist yet
-source = ~/.config/hypridle/*
-# hyprlang noerror false
+source = ~/.config/hypr/hypridle/*
