--- a/Configs/.config/hyde/config.toml
+++ b/Configs/.config/hyde/config.toml
@@ -1,3 +1,16 @@
 # Configuration file for HyDE
 # Environment variables should be on top
 # Updated config.toml file can be found at $HOME/.local/share/hyde/config.toml
+
+[rofi]
+# global rofi configuration`
+font = "JetBrainsMono Nerd Font"
+scale = 10 # rofi default scaling
+
+[rofi.launch]
+# rofilaunch.sh configuration
+scale = 10
+
+[rofi.cliphist]
+# cliphist.sh configuration
+scale = 10
