--- a/Configs/.config/hyde/config.toml
+++ b/Configs/.config/hyde/config.toml
@@ -5,7 +5,7 @@
 [rofi]
 # global rofi configuration`
 font = "JetBrainsMono Nerd Font"
-scale = 10 # rofi default scaling
+scale = 10
 
 [rofi.launch]
 # rofilaunch.sh configuration
@@ -14,3 +14,7 @@ scale = 10
 [rofi.cliphist]
 # cliphist.sh configuration
 scale = 10
+
+[screenshot]
+# screenshot.sh configuration
+annotation_tool = "swappy"
