waybar: configured custom layout
waybar: do not use all-outputs for taskbar

waybar: patch spotify module

waybar: drop microphone module

waybar: user-defined style for privacy module

waybar: two layouts

waybar: all-outputs for wlr-taskbar

waybar: tune language format

waybar: explicit tray module color

waybar layouts updated

waybar crit temps updated

waybar: layout & temperature modules for notebook

waybar: style change for temperature modules

waybar: update temp modules

waybar: customized calendar popup

waybar: change user styles

waybar: part of userstyles is in main repo now

waybar: add tray ignore-list

--- a/Configs/.local/share/waybar/modules/tray.jsonc
+++ b/Configs/.local/share/waybar/modules/tray.jsonc
@@ -1,5 +1,16 @@
 {
     "tray": {
-        "spacing": 5
+        "spacing": 5,
+        "ignore-list": [
+            "brave",
+            "brave-browser",
+            "google-chrome",
+            "chrome",
+            "chromium",
+            "chromium-browser",
+            "opera",
+            "vivaldi",
+            "vivaldi-bin"
+        ]
     }
 }
