--- a/Configs/.local/share/waybar/modules/clock.jsonc
+++ b/Configs/.local/share/waybar/modules/clock.jsonc
@@ -1,18 +1,19 @@
 {
   "clock": {
-    "format": "{:%I:%M %p}",
+    "format": "{:%H:%M:%S}",
+    "interval": 1,
     "rotate": 0,
     "format-alt": "{:%R \udb80\udced %d\u00b7%m\u00b7%y}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
-      "mode": "month",
+      "mode": "year",
       "mode-mon-col": 3,
       "on-scroll": 1,
       "on-click-right": "mode",
       "format": {
         "months": "<span color='#ffead3'><b>{}</b></span>",
         "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-        "today": "<span color='#ff6699'><b>{}</b></span>"
+        "today": "<span color='#ffd700'><b>{}</b></span>"
       }
     },
     "actions": {
