--- a/Configs/.local/share/hyde/schema/config.toml
+++ b/Configs/.local/share/hyde/schema/config.toml
@@ -102,6 +102,14 @@ type      = "object"
     description = "Scaling for glyph picker."
     type        = "integer"
 
+[properties.rofi.properties.glyph.properties.args]
+    default     = [ "-multi-select" ]
+    description = "Additional arguments for glyph picker."
+    type        = "array"
+[properties.rofi.properties.glyph.properties.args.items]
+    type = "string"
+
+
 [properties.rofi.properties.launch]
     description = "rofilaunch.sh configuration."
     type        = "object"
@@ -195,6 +203,14 @@ type      = "object"
     default     = 10
     description = "Scaling for emoji picker."
     type        = "integer"
+
+[properties.rofi.properties.emoji.properties.args]
+    default     = [ "-multi-select" ]
+    description = "Additional arguments for emoji picker."
+    type        = "array"
+[properties.rofi.properties.emoji.properties.args.items]
+    type = "string"
+
 
 [properties.rofi.properties.theme]
     description = "themeselect.sh configuration."
@@ -474,7 +490,7 @@ type      = "object"
     type        = "array"
 
 [properties."cava.stdout".properties.bar_array.items]
-    type        = "string"
+    type = "string"
 
 [properties."cava.hyprlock"]
     description = "'cava.sh hyprlock' configuration."
@@ -506,7 +522,7 @@ type      = "object"
     type        = "array"
 
 [properties."cava.hyprlock".properties.bar_array.items]
-    type        = "string"
+    type = "string"
 
 [properties."cava.waybar"]
     description = "'cava.sh waybar' configuration."
@@ -538,7 +554,7 @@ type      = "object"
     type        = "array"
 
 [properties."cava.waybar".properties.bar_array.items]
-    type        = "string"
+    type = "string"
 
 [properties."cava"]
     description = "Cava visualizer configuration."
@@ -571,7 +587,7 @@ type      = "object"
     type        = "array"
 
 [properties."hypr.config".properties.sanitize.items]
-    type        = "string"
+    type = "string"
 
 [properties.volume]
     description = "volumecontrol.sh configuration."
@@ -626,7 +642,7 @@ type      = "object"
     type        = "array"
 
 [properties.sysmonitor.properties.commands.items]
-    type        = "string"
+    type = "string"
 
 [properties.notification]
     description = "Notification script configuration."
