--- a/Configs/.config/swaync/config.json
+++ b/Configs/.config/swaync/config.json
@@ -1,18 +1,19 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
+  "ignore-gtk-theme": true,
   "positionX": "right",
   "positionY": "top",
   "layer": "overlay",
   "control-center-layer": "top",
   "layer-shell": true,
-  "cssPriority": "application",
+  "layer-shell-cover-screen": true,
+  "cssPriority": "highest",
   "control-center-margin-top": 5,
   "control-center-margin-bottom": 100,
   "control-center-margin-right": 20,
   "control-center-margin-left": 20,
   "notification-2fa-action": true,
-  "notification-inline-replies": true,
-  "notification-icon-size": 64,
+  "notification-inline-replies": false,
   "notification-body-image-height": 100,
   "notification-body-image-width": 200,
   "timeout": 10,
@@ -20,14 +21,16 @@
   "timeout-critical": 0,
   "fit-to-screen": true,
   "relative-timestamps": true,
-  "control-center-width": 350,
+  "control-center-width": 500,
   "control-center-height": 600,
-  "notification-window-width": 400,
+  "notification-window-width": 500,
   "keyboard-shortcuts": true,
+  "notification-grouping": true,
   "image-visibility": "when-available",
   "transition-time": 200,
   "hide-on-clear": false,
   "hide-on-action": true,
+  "text-empty": "No Notifications",
   "script-fail-notify": true,
   "scripts": {
     "example-script": {
@@ -72,17 +75,20 @@
       "text": "Label Text"
     },
     "mpris": {
-      "image-size": 96,
-      "image-radius": 12
+      "blacklist": [],
+      "autohide": false,
+      "show-album-art": "always",
+      "loop-carousel": false
     },
     "buttons-grid": {
+      "buttons-per-row": 7,
       "actions": [
         {
           "label": "直",
           "type": "toggle",
           "active": true,
           "command": "sh -c '[[ $SWAYNC_TOGGLE_STATE == true ]] && nmcli radio wifi on || nmcli radio wifi off'",
-          "update_command": "sh -c '[[ $(nmcli radio wifi) == \"enabled\" ]] && echo true || echo false'"
+          "update-command": "sh -c '[[ $(nmcli radio wifi) == \"enabled\" ]] && echo true || echo false'"
         }
       ]
     }
