Fix: [Bug]: spotify module not working #1002

--- a/Configs/.local/share/hyde/hyprland.conf
+++ b/Configs/.local/share/hyde/hyprland.conf
@@ -236,6 +236,7 @@ misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
     force_default_wallpaper = 0
+    anr_missed_pings = 5
 }
 
 xwayland {
