feat: General Purpose Mediaplayer

--- a/Configs/.local/share/waybar/modules/custom-mediaplayer.jsonc
+++ b/Configs/.local/share/waybar/modules/custom-mediaplayer.jsonc
@@ -2,9 +2,24 @@
   "custom/mediaplayer": {
     "exec": "hyde-shell mediaplayer.py",
     "return-type": "json",
-    "format": "{}",
-    "on-click": "kill -RTMIN $(pgrep -f $HOME/.local/lib/hyde/mediaplayer.py | head -n 1)",
-    "on-click-middle": "kill -RTMIN+1 $(pgrep -f $HOME/.local/lib/hyde/mediaplayer.py | head -n 1)",
-    "on-click-right": "kill -RTMIN+2 $(pgrep -f $HOME/.local/lib/hyde/mediaplayer.py | head -n 1)",
-  },
+    "format": "{0}",
+    "tooltip": true,
+    "on-click": "playerctl play-pause",
+    "on-click-middle": "playerctl previous",
+    "on-scroll-up": "playerctl position 1-",
+    "on-scroll-down": "playerctl position 1+",
+    "menu": "on-click-right",
+    "menu-file": "${HYDE_WAYBAR_MENU_DIR:-$XDG_DATA_HOME/waybar/menus}/mediaplayer.xml",
+    "menu-actions": {
+      "play-pause": "playerctl play-pause",
+      "next": "playerctl next",
+      "previous": "playerctl previous",
+      "stop": "playerctl stop",
+      "shuffle": "playerctl shuffle toggle",
+      "repeat": "playerctl loop Track",
+      "loop": "playerctl loop Playlist",
+      "disable-loop": "playerctl loop None"
+    },
+    "restart-interval": 5
+  }
 }
