Core: Detach hyprland from theming stack.

--- a/Configs/.local/share/hyde/hyprland.conf
+++ b/Configs/.local/share/hyde/hyprland.conf
@@ -17,23 +17,14 @@ $scrPath=$HOME/.local/lib/hyde # set scripts path
 
 # Main modifier
 $mainMod = SUPER # windows key
-# assign apps
 
-$default.$QUICKAPPS =
-$default.BROWSER = hyde-launch.sh --fall firefox web-browser
-$default.EDITOR = hyde-launch.sh --fall code-oss text-editor
-$default.EXPLORER= hyde-launch.sh --fall dolphin file-manager
-$default.TERMINAL = kitty
-$default.LOCKSCREEN=hyprlock
-$default.IDLE=systemctl --user start hypridle.service || hypridle
-
-$QUICKAPPS = $default.$QUICKAPPS
-$BROWSER = $default.BROWSER
-$EDITOR = $default.EDITOR
-$EXPLORER= $default.EXPLORER
-$TERMINAL = $default.TERMINAL
-$LOCKSCREEN=$default.LOCKSCREEN
-$IDLE= $default.IDLE
+$QUICKAPPS = 
+$BROWSER = hyde-launch.sh --fall firefox web-browser
+$EDITOR =  hyde-launch.sh --fall code-oss text-editor
+$EXPLORER= hyde-launch.sh --fall dolphin file-manager
+$TERMINAL = kitty
+$LOCKSCREEN= hyprlock
+$IDLE= systemctl --user start hypridle.service || hypridle
 
 
 # // █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
@@ -105,51 +96,56 @@ $env.XDG_STATE_HOME=$HOME/.local/state
 # // █▀▀ ▀█▀ █▄▀
 # // █▄█ ░█░ █░█
 
-$default.GTK_THEME=Wallbash-Gtk
-$default.ICON_THEME=Tela-circle-dracula
-$default.COLOR_SCHEME=prefer-dark
+# $default.GTK_THEME=Wallbash-Gtk
+# $default.ICON_THEME=Tela-circle-dracula
+# $default.COLOR_SCHEME=prefer-dark
 
-$GTK_THEME=$default.GTK_THEME
-$ICON_THEME=$default.ICON_THEME
-$COLOR_SCHEME=$default.COLOR_SCHEME
+$GTK_THEME=Wallbash-Gtk
+$ICON_THEME=Tela-circle-dracula
+$COLOR_SCHEME=prefer-dark
 
 $BUTTON_LAYOUT= #? colon separated list of buttons, e.g. appmenu:minimize,maximize,close
 
 # // █▀▀ █░█ █▀█ █▀ █▀█ █▀█
 # // █▄▄ █▄█ █▀▄ ▄█ █▄█ █▀▄
 
-$default.CURSOR_THEME=Bibata-Modern-Ice
-$default.CURSOR_SIZE=24
+# $default.CURSOR_THEME=Bibata-Modern-Ice
+# $default.CURSOR_SIZE=24
 
-$CURSOR_THEME=$default.CURSOR_THEME
-$CURSOR_SIZE=$default.CURSOR_SIZE
+$CURSOR_THEME=Bibata-Modern-Ice
+$CURSOR_SIZE=24
 
 # // █▀▀ █▀█ █▄░█ ▀█▀
 # // █▀░ █▄█ █░▀█ ░█░
 
-$default.FONT=Cantarell
-$default.FONT_SIZE=10
-$default.DOCUMENT_FONT=Cantarell
-$default.DOCUMENT_FONT_SIZE=10
-$default.MONOSPACE_FONT=CaskaydiaCove Nerd Font Mono
-$default.MONOSPACE_FONT_SIZE=9
-$default.NOTIFICATION_FONT=Mononoki Nerd Font Mono
-$default.BAR_FONT=JetBrainsMono Nerd Font
-# $default.MENU_FONT=This is not yet set as it looks perfect with the global font 
-$default.FONT_ANTIALIASING=rgba
-$default.FONT_HINTING=full
+# $default.FONT=Cantarell
+# $default.FONT_SIZE=10
+# $default.DOCUMENT_FONT=Cantarell
+# $default.DOCUMENT_FONT_SIZE=10
+# $default.MONOSPACE_FONT=CaskaydiaCove Nerd Font Mono
+# $default.MONOSPACE_FONT_SIZE=9
+# $default.NOTIFICATION_FONT=Mononoki Nerd Font Mono
+# $default.BAR_FONT=JetBrainsMono Nerd Font
+# $default.MENU_FONT=$default.FONT # 
+# $default.FONT_ANTIALIASING=rgba
+# $default.FONT_HINTING=full
 
-$FONT=$default.FONT
-$FONT_SIZE=$default.FONT_SIZE
-$DOCUMENT_FONT=$default.DOCUMENT_FONT
-$DOCUMENT_FONT_SIZE=$default.DOCUMENT_FONT_SIZE
-$MONOSPACE_FONT=$default.MONOSPACE_FONT
-$MONOSPACE_FONT_SIZE=$default.MONOSPACE_FONT_SIZE
-$NOTIFICATION_FONT=$default.NOTIFICATION_FONT
-$BAR_FONT=$default.BAR_FONT
-# $MENU_FONT=$default.MENU_FONT
-$FONT_ANTIALIASING=$default.FONT_ANTIALIASING
-$FONT_HINTING=$default.FONT_HINTING
+$FONT=Cantarell
+$FONT_SIZE=10
+$DOCUMENT_FONT=Cantarell
+$DOCUMENT_FONT_SIZE=10
+$MONOSPACE_FONT=CaskaydiaCove Nerd Font Mono
+$MONOSPACE_FONT_SIZE=9
+$NOTIFICATION_FONT=Mononoki Nerd Font Mono
+$BAR_FONT=JetBrainsMono Nerd Font
+$MENU_FONT=$FONT #? Use the same font as the main font
+$FONT_ANTIALIASING=rgba
+$FONT_HINTING=full 
+
+# Extra Themes
+$CODE_THEME=
+$SDDM_THEME=
+
 
 # // █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # // █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
@@ -354,47 +350,16 @@ env = HYDE_CACHE_HOME,$env.XDG_CACHE_HOME/hyde
 env = HYDE_DATA_HOME,$env.XDG_DATA_HOME/hyde
 env = HYDE_STATE_HOME,$env.XDG_STATE_HOME/hyde
 
-# CURSOR ENV
-# env = HYPRCURSOR_THEME,$CURSOR_THEME
-# env = HYPRCURSOR_SIZE,$CURSOR_SIZE
-# env = XCURSOR_THEME,$CURSOR_THEME
-# env = XCURSOR_SIZE,$CURSOR_SIZE
-
 # Execute on reload
 
 # HyDE Preparation
 $exec.mkdir = mkdir -p $env.XDG_RUNTIME_DIR/hyde $env.XDG_CACHE_HOME/hyde/wallbash $env.XDG_CONFIG_HOME/hyde $env.XDG_DATA_HOME/hyde $(dirname $env.XDG_DATA_HOME)/state/hyde # Create HyDE directories
-$set.env = printf "\n_SHELL='$SHELL'\n_GDK_BACKEND='$env.GDK_BACKEND'\n_QT_QPA_PLATFORM='$env.QT_QPA_PLATFORM'\n_SDL_VIDEODRIVER='$env.SDL_VIDEODRIVER'\n_CLUTTER_BACKEND='$env.CLUTTER_BACKEND'\n_XDG_CURRENT_DESKTOP='$env.XDG_CURRENT_DESKTOP'\n_XDG_SESSION_TYPE='$env.XDG_SESSION_TYPE'\n_XDG_SESSION_DESKTOP='$env.XDG_SESSION_DESKTOP'\n_QT_AUTO_SCREEN_SCALE_FACTOR='$env.QT_AUTO_SCREEN_SCALE_FACTOR'\n_QT_WAYLAND_DISABLE_WINDOWDECORATION='$env.QT_WAYLAND_DISABLE_WINDOWDECORATION'\n_QT_QPA_PLATFORMTHEME='$env.QT_QPA_PLATFORMTHEME'\n_HYDE_PATH='$hyde.PATH'\n_MOZ_ENABLE_WAYLAND='$env.MOZ_ENABLE_WAYLAND'\n_GDK_SCALE='$env.GDK_SCALE'\n_ELECTRON_OZONE_PLATFORM_HINT='$env.ELECTRON_OZONE_PLATFORM_HINT'\n_XDG_RUNTIME_DIR='$env.XDG_RUNTIME_DIR'\n_XDG_CONFIG_HOME='$env.XDG_CONFIG_HOME'\n_XDG_CACHE_HOME='$env.XDG_CACHE_HOME'\n_XDG_DATA_HOME='$env.XDG_DATA_HOME'\n_GTK_THEME='$GTK_THEME'\n_ICON_THEME='$ICON_THEME'\n_COLOR_SCHEME='$COLOR_SCHEME'\n_CURSOR_SIZE='$CURSOR_SIZE'\n_CURSOR_THEME='$CURSOR_THEME'\n_FONT='$FONT'\n_FONT_SIZE='$FONT_SIZE'\n_DOCUMENT_FONT='$DOCUMENT_FONT'\n_DOCUMENT_FONT_SIZE='$DOCUMENT_FONT_SIZE'\n_MONOSPACE_FONT='$MONOSPACE_FONT'\n_MONOSPACE_FONT_SIZE='$MONOSPACE_FONT_SIZE'\n_FONT_ANTIALIASING='$FONT_ANTIALIASING'\n_FONT_HINTING='$FONT_HINTING'\n_HYDE_RUNTIME_DIR='$env.XDG_RUNTIME_DIR/hyde'\n_HYDE_CONFIG_HOME='$env.XDG_CONFIG_HOME/hyde'\n_HYDE_CACHE_HOME='$env.XDG_CACHE_HOME/hyde'\n_HYDE_DATA_HOME='$env.XDG_DATA_HOME/hyde'\n_HYDE_STATE_HOME='$(dirname $env.XDG_DATA_HOME)/state/hyde'\nexport _TERMINAL='$(which $TERMINAL)'\nexport _LOCKSCREEN='$LOCKSCREEN'" > "$env.XDG_RUNTIME_DIR/hyde/environment"
-
-# Create a dconf file that will be loaded later one time, better than multiple dconf commands and better than gsettings
-$dconFile=$env.XDG_CACHE_HOME/hyde/dconf
-$dConf = \n[org/gnome/desktop/interface]\n
-$dConf = $dConf icon-theme='$ICON_THEME'\n
-$dConf = $dConf gtk-theme='$GTK_THEME'\n
-$dConf = $dConf color-scheme='$COLOR_SCHEME'\n
-$dConf = $dConf cursor-theme='$CURSOR_THEME'\n
-$dConf = $dConf cursor-size=$CURSOR_SIZE\n
-$dConf = $dConf font-name='$FONT $FONT_SIZE'\n
-$dConf = $dConf document-font-name='$DOCUMENT_FONT $DOCUMENT_FONT_SIZE'\n
-$dConf = $dConf monospace-font-name='$MONOSPACE_FONT $MONOSPACE_FONT_SIZE'\n
-$dConf = $dConf font-antialiasing='$FONT_ANTIALIASING'\n
-$dConf = $dConf font-hinting='$FONT_HINTING'\n
-$dConf = $dConf [org/gnome/desktop/default-applications/terminal]\nexec='$(which $TERMINAL)'
-$dConf = $dConf \n[org/gnome/desktop/wm/preferences]\nbutton-layout='$BUTTON_LAYOUT'\n
-$dconf.preserve =  dconf dump / > $dconFile
-$dconf.populate =  printf "$dConf" >> $dconFile
-$dconf.reset = dconf reset -f / < $dconFile #! Use this as dconf update won't refresh when key-val is the same
-$dconf.load = dconf load -f / < $dconFile
-# $dconf.update = dconf update
-$set.hyprCursor = hyprctl setcursor $CURSOR_THEME $CURSOR_SIZE
-# $exec.dConf = ( $dconf.populate && $dconf.load && $dconf.update && $set.hyprCursor ) 
-$exec.dConf = ( $dconf.preserve && $dconf.populate && $dconf.reset && $dconf.load && $set.hyprCursor ) 
+# $set.env = printf "\n_SHELL='$SHELL'\n_GDK_BACKEND='$env.GDK_BACKEND'\n_QT_QPA_PLATFORM='$env.QT_QPA_PLATFORM'\n_SDL_VIDEODRIVER='$env.SDL_VIDEODRIVER'\n_CLUTTER_BACKEND='$env.CLUTTER_BACKEND'\n_XDG_CURRENT_DESKTOP='$env.XDG_CURRENT_DESKTOP'\n_XDG_SESSION_TYPE='$env.XDG_SESSION_TYPE'\n_XDG_SESSION_DESKTOP='$env.XDG_SESSION_DESKTOP'\n_QT_AUTO_SCREEN_SCALE_FACTOR='$env.QT_AUTO_SCREEN_SCALE_FACTOR'\n_QT_WAYLAND_DISABLE_WINDOWDECORATION='$env.QT_WAYLAND_DISABLE_WINDOWDECORATION'\n_QT_QPA_PLATFORMTHEME='$env.QT_QPA_PLATFORMTHEME'\n_HYDE_PATH='$hyde.PATH'\n_MOZ_ENABLE_WAYLAND='$env.MOZ_ENABLE_WAYLAND'\n_GDK_SCALE='$env.GDK_SCALE'\n_ELECTRON_OZONE_PLATFORM_HINT='$env.ELECTRON_OZONE_PLATFORM_HINT'\n_XDG_RUNTIME_DIR='$env.XDG_RUNTIME_DIR'\n_XDG_CONFIG_HOME='$env.XDG_CONFIG_HOME'\n_XDG_CACHE_HOME='$env.XDG_CACHE_HOME'\n_XDG_DATA_HOME='$env.XDG_DATA_HOME'\n_GTK_THEME='$GTK_THEME'\n_ICON_THEME='$ICON_THEME'\n_COLOR_SCHEME='$COLOR_SCHEME'\n_CURSOR_SIZE='$CURSOR_SIZE'\n_CURSOR_THEME='$CURSOR_THEME'\n_FONT='$FONT'\n_FONT_SIZE='$FONT_SIZE'\n_DOCUMENT_FONT='$DOCUMENT_FONT'\n_DOCUMENT_FONT_SIZE='$DOCUMENT_FONT_SIZE'\n_MONOSPACE_FONT='$MONOSPACE_FONT'\n_MONOSPACE_FONT_SIZE='$MONOSPACE_FONT_SIZE'\n_FONT_ANTIALIASING='$FONT_ANTIALIASING'\n_FONT_HINTING='$FONT_HINTING'\n_HYDE_RUNTIME_DIR='$env.XDG_RUNTIME_DIR/hyde'\n_HYDE_CONFIG_HOME='$env.XDG_CONFIG_HOME/hyde'\n_HYDE_CACHE_HOME='$env.XDG_CACHE_HOME/hyde'\n_HYDE_DATA_HOME='$env.XDG_DATA_HOME/hyde'\n_HYDE_STATE_HOME='$(dirname $env.XDG_DATA_HOME)/state/hyde'\nexport _TERMINAL='$(which $TERMINAL)'\nexport _LOCKSCREEN='$LOCKSCREEN'" > "$env.XDG_RUNTIME_DIR/hyde/environment"
 
 $exec.keybinds_hint = hyde-shell keybinds.hint.py --format rofi > $env.XDG_RUNTIME_DIR/hyde/keybinds_hint.rofi
 
 # Execute
-exec = $exec.dConf
-exec = $exec.mkdir & $set.env & $exec.animation & $exec.keybinds_hint
+exec = $exec.mkdir & $exec.keybinds_hint
 
 # // █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # // █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
@@ -414,6 +379,7 @@ exec-once = uwsm app -t service -s a -- $start.NETWORK_MANAGER || $start.NETWORK
 exec-once = uwsm app -t service -s a -- $start.REMOVABLE_MEDIA || $start.REMOVABLE_MEDIA # udiskie (daemon)
 exec-once = uwsm app -t service -s s -- $start.AUTH_DIALOGUE || $start.AUTH_DIALOGUE # polkitkdeauth.sh (authentication agent)
 exec-once = uwsm app -t service -s s -- $start.IDLE_DAEMON || $start.IDLE_DAEMON # hypridle (daemon)
+exec-once = hyde-shell dconf.set.sh
 
 # hyde/config.toml is parsed and exported to the environment
 # exec-once = $scrPath/parse.config.py --daemon --input $env.XDG_CONFIG_HOME/hyde/config.toml --env $env.XDG_STATE_HOME/hyde/config --hypr $env.XDG_STATE_HOME/hyde/hyprland.conf
@@ -465,3 +431,30 @@ layerrule = ignorezero,swaync-notification-window
 layerrule = blur,swaync-control-center
 layerrule = ignorezero,swaync-control-center
 layerrule = blur,logout_dialog
+
+# Custom  parsable config file fo HyDE
+# hyprlang noerror true
+hyde {
+    theme=$HYDE_THEME
+    gtk-theme=$GTK_THEME
+    icon-theme=$ICON_THEME
+    color-scheme=$COLOR_SCHEME
+    cursor-theme=$CURSOR_THEME
+    cursor-size=$CURSOR_SIZE
+    font=$FONT 
+    font-size=$FONT_SIZE
+    bar-font=$BAR_FONT
+    notification-font=$NOTIFICATION_FONT
+    menu-font=$MENU_FONT
+    document-font=$DOCUMENT_FONT
+    document-font-size=$DOCUMENT_FONT_SIZE
+    monospace-font=$MONOSPACE_FONT
+    monospace-font-size=$MONOSPACE_FONT_SIZE
+    font-antialiasing=$FONT_ANTIALIASING
+    font-hinting=$FONT_HINTING
+    button-layout=$BUTTON_LAYOUT
+    terminal=$TERMINAL
+    lockscreen=$LOCKSCREEN
+
+}
+# hyprlang noerror false
