--- a/Configs/.config/hypr/shaders.conf
+++ b/Configs/.config/hypr/shaders.conf
@@ -7,7 +7,7 @@
 # *│ HyDE Controlled content DO NOT EDIT!                                      |
 # *│ Edit or add shaders in the ./shaders/ directory                           |
 # *│ and run the 'shaders.sh --select' command to update this file             |
-# *│ Modify ./shaders/user-defines.frag to add your own custom defines         |
+# *│ Modify ./shaders/shader-name.inc to add your own custom defines         |
 # *│ The 'shader.sh' script will automatically copy this file to the cache     |
 # *│ and the cache will be used in the shader                                  |
 # *│                                                                            |
