Fix [Bug]: Pop up menu of doesn't properly fit in layout when clicked on Open menu. #704
Closes #704

--- a/Configs/.local/share/hyde/hyprland.conf
+++ b/Configs/.local/share/hyde/hyprland.conf
@@ -427,6 +427,12 @@ exec-once = systemctl --user start hyde-config.service #! If this is not working
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
+# Sizes for floating popups
+windowrule = size <85% <90%,floating:1
+windowrule = float,tag:common-popups
+windowrule = size <60% <90%,tag:common-popups
+
+
 # Ony add the Core applications here
 windowrule = float,class:^(com.gabm.satty)$
 windowrule = float,class:^(org.kde.dolphin)$,title:^(Progress Dialog — Dolphin)$
@@ -451,6 +457,13 @@ windowrule = float,class:^(nm-connection-editor)$
 windowrule = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrule = float,class:^([Xx]dg-desktop-portal-gtk)$
 
+# common popups
+windowrule =  tag +common-popups,initialTitle:^(Open File)$
+windowrule =  tag +common-popups,title:^(Choose Files)$
+windowrule =  tag +common-popups,title:^(Save As)$
+windowrule =  tag +common-popups,title:^(Confirm to replace files)$
+windowrule =  tag +common-popups,title:^(File Operation Progress)$
+windowrule =  tag +common-popups,class:^(xdg-desktop-portal-gtk)$
 
 
 # // █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
