hyde-shell init

--- a/Configs/.local/share/hyde/hyprland.conf
+++ b/Configs/.local/share/hyde/hyprland.conf
@@ -429,7 +429,8 @@ windowrule =  tag +common-popups,title:^(Choose Files)$
 windowrule =  tag +common-popups,title:^(Save As)$
 windowrule =  tag +common-popups,title:^(Confirm to replace files)$
 windowrule =  tag +common-popups,title:^(File Operation Progress)$
-windowrule =  tag +common-popups,class:^(xdg-desktop-portal-gtk)$
+windowrulev2 =  tag +common-popups,class:^(xdg-desktop-portal-gtk)$
+
 
 
 # // █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
