More preparations for UWSM See CHANGELOG.md for more info

--- a/Configs/.local/share/hyde/hyprland.conf
+++ b/Configs/.local/share/hyde/hyprland.conf
@@ -24,7 +24,7 @@ $EDITOR =  hyde-launch.sh --fall code-oss text-editor
 $EXPLORER= hyde-launch.sh --fall dolphin file-manager
 $TERMINAL = kitty
 $LOCKSCREEN= hyprlock
-$IDLE= systemctl --user start hypridle.service || hypridle
+$IDLE= systemctl --user start hypridle.service || hyde-shell app -t service hypridle
 
 
 # // █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
@@ -35,17 +35,17 @@ $IDLE= systemctl --user start hypridle.service || hypridle
 $start.XDG_PORTAL_RESET=hyde-shell resetxdgportal.sh
 $start.DBUS_SHARE_PICKER=dbus-update-activation-environment --systemd --all # for XDPH
 $start.SYSTEMD_SHARE_PICKER=systemctl --user import-environment QT_QPA_PLATFORMTHEME WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
-$start.BAR=hyde-shell waybar.py --watch
-$start.NOTIFICATIONS=dunst
-$start.APPTRAY_BLUETOOTH=blueman-applet
-$start.WALLPAPER=hyde-shell wallpaper.sh --global
-$start.TEXT_CLIPBOARD=wl-paste --type text --watch cliphist store
-$start.IMAGE_CLIPBOARD=wl-paste --type image --watch cliphist store
-$start.CLIPBOARD_PERSIST=wl-clip-persist --clipboard regular
-$start.BATTERY_NOTIFY=hyde-shell batterynotify.sh
-$start.NETWORK_MANAGER=nm-applet --indicator
-$start.REMOVABLE_MEDIA=udiskie --no-automount --smart-tray
-$start.AUTH_DIALOGUE=hyde-shell polkitkdeauth.sh
+$start.BAR=hyde-shell app -t service waybar.py --watch
+$start.NOTIFICATIONS=hyde-shell app -t service dunst
+$start.APPTRAY_BLUETOOTH=hyde-shell app -t service blueman-applet
+$start.WALLPAPER=hyde-shell app -t service wallpaper.sh --global
+$start.TEXT_CLIPBOARD=hyde-shell app -t service wl-paste --type text --watch cliphist store
+$start.IMAGE_CLIPBOARD=hyde-shell app -t service wl-paste --type image --watch cliphist store
+$start.CLIPBOARD_PERSIST=hyde-shell app -t service wl-clip-persist --clipboard regular
+$start.BATTERY_NOTIFY=hyde-shell app -t service batterynotify.sh
+$start.NETWORK_MANAGER=hyde-shell app -t service nm-applet --indicator
+$start.REMOVABLE_MEDIA=hyde-shell app -t service udiskie --no-automount --smart-tray
+$start.AUTH_DIALOGUE=hyde-shell app -t service polkitkdeauth.sh
 $start.IDLE_DAEMON=$IDLE
 
 # // █▀▀ █▄░█ █░█
@@ -54,15 +54,15 @@ $start.IDLE_DAEMON=$IDLE
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 # Toolkit Backend Variables - https://wiki.hyprland.org/Configuring/Environment-variables/#toolkit-backend-variables
-$env.GDK_BACKEND = wayland,x11,* # GTK: Use wayland if available. If not: try x11, then any other GDK backend.
+# $env.GDK_BACKEND = wayland,x11,* # GTK: Use wayland if available. If not: try x11, then any other GDK backend.
 # $env.QT_QPA_PLATFORM = wayland;xcb # Qt: Use wayland if available, fall back to x11 if not.
-$env.SDL_VIDEODRIVER = wayland # Run SDL2 applications on Wayland. Remove or set to x11 if games that provide older versions of SDL cause compatibility issues
-$env.CLUTTER_BACKEND = wayland # Clutter package already has wayland enabled, this variable will force Clutter applications to try and use the Wayland backend
+# $env.SDL_VIDEODRIVER = wayland # Run SDL2 applications on Wayland. Remove or set to x11 if games that provide older versions of SDL cause compatibility issues
+# $env.CLUTTER_BACKEND = wayland # Clutter package already has wayland enabled, this variable will force Clutter applications to try and use the Wayland backend
 
 # XDG Specifications - https://wiki.hyprland.org/Configuring/Environment-variables/#xdg-specifications
-$env.XDG_CURRENT_DESKTOP = Hyprland
-$env.XDG_SESSION_TYPE = wayland
-$env.XDG_SESSION_DESKTOP = Hyprland
+# $env.XDG_CURRENT_DESKTOP = Hyprland
+# $env.XDG_SESSION_TYPE = wayland
+# $env.XDG_SESSION_DESKTOP = Hyprland
 
 # Qt Variables  - https://wiki.hyprland.org/Configuring/Environment-variables/#qt-variables
 
@@ -131,6 +131,7 @@ $CURSOR_SIZE=24
 # $default.FONT_HINTING=full
 
 $FONT=Cantarell
+$FONT_STYLE=Regular
 $FONT_SIZE=10
 $DOCUMENT_FONT=Cantarell
 $DOCUMENT_FONT_SIZE=10
@@ -138,7 +139,7 @@ $MONOSPACE_FONT=CaskaydiaCove Nerd Font Mono
 $MONOSPACE_FONT_SIZE=9
 $NOTIFICATION_FONT=Mononoki Nerd Font Mono
 $BAR_FONT=JetBrainsMono Nerd Font
-$MENU_FONT=$FONT #? Use the same font as the main font
+$MENU_FONT=JetBrainsMono Nerd Font #? Use the same font as the main font
 $FONT_ANTIALIASING=rgba
 $FONT_HINTING=full 
 
@@ -328,11 +329,13 @@ env = MOZ_ENABLE_WAYLAND,$env.MOZ_ENABLE_WAYLAND
 env = GDK_SCALE,$env.GDK_SCALE
 env = ELECTRON_OZONE_PLATFORM_HINT,$env.ELECTRON_OZONE_PLATFORM_HINT
 
-# XDG Spec
-env = XDG_CURRENT_DESKTOP,$env.XDG_CURRENT_DESKTOP
-env = XDG_SESSION_TYPE,$env.XDG_SESSION_TYPE
-env = XDG_SESSION_DESKTOP,$env.XDG_SESSION_DESKTOP
+# XDG Spec // Should be fine if we have it here.
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
+env = HYPRCURSOR_THEME,$CURSOR_THEME
+env = HYPRCURSOR_SIZE,$CURSOR_SIZE
 
 # HyDE Variables
 $hyde.PATH=$HOME/.local/bin:$scrPath:$env.PATH:$PATH
@@ -364,27 +367,27 @@ exec = $exec.mkdir & $exec.keybinds_hint
 # // █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # // █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
-exec-once = uwsm app -- $start.XDG_PORTAL_RESET || $start.XDG_PORTAL_RESET # resetxdgportal.sh (one-time setup)
-exec-once = uwsm app -- $start.DBUS_SHARE_PICKER || $start.DBUS_SHARE_PICKER # dbus-update-activation-environment (one-time setup)
-exec-once = uwsm app -- $start.SYSTEMD_SHARE_PICKER || $start.SYSTEMD_SHARE_PICKER # systemctl --user import-environment (one-time setup)
+exec-once = $start.XDG_PORTAL_RESET # resetxdgportal.sh (one-time setup)
+exec-once = $start.DBUS_SHARE_PICKER # dbus-update-activation-environment (one-time setup)
+exec-once = $start.SYSTEMD_SHARE_PICKER # systemctl --user import-environment (one-time setup)
 exec-once = $start.BAR # waybar.py --watch (daemon)
-exec-once = uwsm app -t service -s s -- $start.NOTIFICATIONS || $start.NOTIFICATIONS # dunst (daemon)
-exec-once = uwsm app -t service -s a -- $start.APPTRAY_BLUETOOTH || $start.APPTRAY_BLUETOOTH # blueman-applet (system tray)
-exec-once = uwsm app -t service -s b -- $start.WALLPAPER || $start.WALLPAPER # wallpaper.sh --global (daemon)
-exec-once = uwsm app -t service -s s -- $start.TEXT_CLIPBOARD || $start.TEXT_CLIPBOARD # wl-paste --watch (daemon)
-exec-once = uwsm app -t service -s s -- $start.IMAGE_CLIPBOARD || $start.IMAGE_CLIPBOARD # wl-paste --watch (daemon)
-exec-once = uwsm app -t service -s s -- $start.CLIPBOARD_PERSIST || $start.CLIPBOARD_PERSIST # wl-clip-persist (daemon)
-exec-once = uwsm app -t service -s a -- $start.BATTERY_NOTIFY || $start.BATTERY_NOTIFY # batterynotify.sh (monitoring daemon)
-exec-once = uwsm app -t service -s a -- $start.NETWORK_MANAGER || $start.NETWORK_MANAGER # nm-applet (system tray)
-exec-once = uwsm app -t service -s a -- $start.REMOVABLE_MEDIA || $start.REMOVABLE_MEDIA # udiskie (daemon)
-exec-once = uwsm app -t service -s s -- $start.AUTH_DIALOGUE || $start.AUTH_DIALOGUE # polkitkdeauth.sh (authentication agent)
-exec-once = uwsm app -t service -s s -- $start.IDLE_DAEMON || $start.IDLE_DAEMON # hypridle (daemon)
-exec-once = hyde-shell dconf.set.sh
+exec-once = $start.NOTIFICATIONS # dunst (daemon)
+exec-once = $start.APPTRAY_BLUETOOTH # blueman-applet (system tray)
+exec-once = $start.WALLPAPER # wallpaper.sh --global (daemon)
+exec-once = $start.TEXT_CLIPBOARD # wl-paste --watch (daemon)
+exec-once = $start.IMAGE_CLIPBOARD # wl-paste --watch (daemon)
+exec-once = $start.CLIPBOARD_PERSIST # wl-clip-persist (daemon)
+exec-once = $start.BATTERY_NOTIFY # batterynotify.sh (monitoring daemon)
+exec-once = $start.NETWORK_MANAGER # nm-applet (system tray)
+exec-once = $start.REMOVABLE_MEDIA # udiskie (daemon)
+exec-once = $start.AUTH_DIALOGUE # polkitkdeauth.sh (authentication agent)
+exec-once = $start.IDLE_DAEMON # hypridle (daemon)
+# exec-once = hyde-shell dconf.set.sh
 
 # hyde/config.toml is parsed and exported to the environment
 # exec-once = $scrPath/parse.config.py --daemon --input $env.XDG_CONFIG_HOME/hyde/config.toml --env $env.XDG_STATE_HOME/hyde/config --hypr $env.XDG_STATE_HOME/hyde/hyprland.conf
 # exec-once = systemctl --user start hyde-config.service #! If this is not working try the command above!
-exec-once = hyde-shell hyde-config
+exec-once = hyde-shell app -t service hyde-config --no-startup
 
 #? Rules can be added here as most of the configuration are dynamic
 
