--- a/Configs/.local/share/hypr/hyprland.conf
+++ b/Configs/.local/share/hypr/hyprland.conf
@@ -13,41 +13,32 @@
 # // ██████╔╝╚█████╔╝  ██║░╚███║╚█████╔╝░░░██║░░░  ███████╗██████╔╝██║░░░██║░░░
 # // ╚═════╝░░╚════╝░  ╚═╝░░╚══╝░╚════╝░░░░╚═╝░░░  ╚══════╝╚═════╝░╚═╝░░░╚═╝░░░
 
-# hyprlang if !XDG_DATA_HOME
-$XDG_DATA_HOME = $HOME/.local/share
-# hyprlang endif
-# hyprlang if !XDG_CONFIG_HOME
-$XDG_CONFIG_HOME = $HOME/.config
-# hyprlang endif
+$CONFIG_ALREADY_LOADED = true
 
-
-
-#? Environment variable Setup
-source = $XDG_DATA_HOME/hypr/env.conf
-
-# hyprlang if !CONFIG_ALREADY_LOADED
 # ? Variables
-source = $XDG_DATA_HOME/hypr/variables.conf
+source = ./variables.conf
 
 # ? Default values
-source = $XDG_DATA_HOME/hypr/defaults.conf
+source = ./defaults.conf
 
 #? Window rules
-source = $XDG_DATA_HOME/hypr/windowrules.conf
+source = ./windowrules.conf
+
+# ? Environment variable Setup
+source = ./env.conf
 
 #? Dynamic Stuff example theming and variable handlings
-source = $XDG_DATA_HOME/hypr/dynamic.conf
+source = ./dynamic.conf
 
 #? HyDE's startup overridable too!
-source = $XDG_DATA_HOME/hypr/startup.conf
+source = ./startup.conf
 
-# #? user now can have this file
-# source = $XDG_CONFIG_HOME/hypr/hyprland.conf  
+#? user now can have this file
+source = $XDG_CONFIG_HOME/hypr/hyprland.conf  
 
 #? workflows configuration overrides everything
 source = $XDG_CONFIG_HOME/hypr/workflows.conf
 
 #? finalized all variables as hyde properties 'hyde:variable'. This is faster to query than dynamic variables  
-source = $XDG_DATA_HOME/hypr/finale.conf
+source = ./finale.conf
 
-# hyprlang endif
