Fix [Bug]: Icons cannot be displayed properly #1018
Closes https://github.com/HyDE-Project/HyDE/issues/1083

--- a/Configs/.local/share/hypr/variables.conf
+++ b/Configs/.local/share/hypr/variables.conf
@@ -7,7 +7,7 @@ $QUICKAPPS =
 $BROWSER = hyde-launch.sh --fall firefox web-browser
 $EDITOR = hyde-launch.sh --fall code-oss text-editor
 $EXPLORER= hyde-launch.sh --fall dolphin file-manager
-$TERMINAL = kitty
+$TERMINAL = hyde-shell xdg-terminal-exec
 $LOCKSCREEN= hyprlock
 $IDLE= hyde-shell app -t service hypridle
 
@@ -22,7 +22,7 @@ $start.SYSTEMD_SHARE_PICKER=systemctl --user import-environment QT_QPA_PLATFORMT
 $start.BAR=hyde-shell app -t service waybar.py --watch
 $start.NOTIFICATIONS=hyde-shell app -t service dunst
 $start.APPTRAY_BLUETOOTH=hyde-shell app -t service blueman-applet
-$start.WALLPAPER=hyde-shell app -t service wallpaper.sh --global
+$start.WALLPAPER=hyde-shell app wallpaper.sh --global
 $start.TEXT_CLIPBOARD=hyde-shell app -t service wl-paste --type text --watch cliphist store
 $start.IMAGE_CLIPBOARD=hyde-shell app -t service wl-paste --type image --watch cliphist store
 $start.CLIPBOARD_PERSIST=hyde-shell app -t service wl-clip-persist --clipboard regular
