--- a/Configs/.local/share/hypr/env.conf
+++ b/Configs/.local/share/hypr/env.conf
@@ -17,7 +17,8 @@
 # Qt Variables  - https://wiki.hyprland.org/Configuring/Environment-variables/#qt-variables
 
 $env.QT_AUTO_SCREEN_SCALE_FACTOR = 1 # (From the Qt documentation) enables automatic scaling, based on the monitor’s pixel density
-$env.QT_QPA_PLATFORM = wayland;xcb  # Tell Qt applications to use the Wayland backend, and fall back to x11 if Wayland is unavailable
+$env.QT_QPA_PLATFORM = wayland
+xcb # Tell Qt applications to use the Wayland backend, and fall back to x11 if Wayland is unavailable
 
 $env.QT_WAYLAND_DISABLE_WINDOWDECORATION = 1 # Disables window decorations on Qt applications
 $env.QT_QPA_PLATFORMTHEME = qt6ct            # Tells Qt based applications to pick your theme from qt5ct, use with Kvantum.
@@ -71,7 +72,8 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 # hyprlang endif
 
 # hyprlang if !QT_QPA_PLATFORM
-env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORM,wayland
+xcb
 # hyprlang endif
 
 # hyprlang if !QT_WAYLAND_DISABLE_WINDOWDECORATION
@@ -95,13 +97,14 @@ env = GDK_SCALE,1
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # hyprlang endif
 
-# hyprlang if !HYPRCURSOR_THEME
-env = HYPRCURSOR_THEME,$CURSOR_THEME
-# hyprlang endif
+# ! these kind of stuff should not be here, for dynamic theming
+# # hyprlang if !HYPRCURSOR_THEME
+# env = HYPRCURSOR_THEME,$CURSOR_THEME
+# # hyprlang endif
 
-# hyprlang if !HYPRCURSOR_SIZE
-env = HYPRCURSOR_SIZE,$CURSOR_SIZE
-# hyprlang endif
+# # hyprlang if !HYPRCURSOR_SIZE
+# env = HYPRCURSOR_SIZE,$CURSOR_SIZE
+# # hyprlang endif
 
 # HyDE Variables
 $hyde.PATH=$HOME/.local/bin:$scrPath:$env.PATH:$PATH
