--- a/Configs/.local/share/hypr/dynamic.conf
+++ b/Configs/.local/share/hypr/dynamic.conf
@@ -69,4 +69,5 @@ $exec.mkdir = mkdir -p $XDG_RUNTIME_DIR/hyde $XDG_CACHE_HOME/hyde/wallbash $XDG_
 $exec.keybinds_hint = hyde-shell keybinds.hint.py --format rofi > $XDG_RUNTIME_DIR/hyde/keybinds_hint.rofi
 
 # Execute on reload
-exec = $exec.mkdir & $exec.keybinds_hint
+exec = $exec.mkdir & $exec.keybinds_hint 
+exec = hyprctl setcursor $CURSOR_THEME $CURSOR_SIZE
