feat: allow window swallowing and remove hyprland ad

--- a/Configs/.local/share/hyde/hyprland.conf
+++ b/Configs/.local/share/hyde/hyprland.conf
@@ -478,3 +478,19 @@ layerrule = ignorezero,swaync-notification-window
 layerrule = blur,swaync-control-center
 layerrule = ignorezero,swaync-control-center
 layerrule = blur,logout_dialog
+
+# for window shallow similar to devour
+misc {
+
+enable_swallow = true
+swallow_regex = (foot|kitty|allacritty|Alacritty|ghostty|Ghostty|org.wezfurlong.wezterm)
+
+}
+
+# Don't show update on first launch
+ecosystem {
+  no_update_news = true
+}
+
+
+
