Fix: [Bug]: calibre colors - QT_QPA_PLATFORMTHEME is not set #1114
Close #1114

--- a/Configs/.local/share/hypr/env.conf
+++ b/Configs/.local/share/hypr/env.conf
@@ -79,6 +79,7 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 # hyprlang endif
 
 # hyprlang if !QT_QPA_PLATFORMTHEME
+env = QT_QPA_PLATFORMTHEME,qt6ct
 # hyprlang endif
 
 # Wayland-ENV
