prepare hyprland next release

--- a/Configs/.local/share/hypr/defaults.conf
+++ b/Configs/.local/share/hypr/defaults.conf
@@ -53,7 +53,7 @@ input {
 
 gestures {
     #See https://wiki.hyprland.org/Configuring/Variables/#gestures
-    workspace_swipe = true
+    # workspace_swipe = true
 }
 
 
